[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/button/bg_btn.png" type="Texture" id=1]
[ext_resource path="res://assets/font/font_20_UI.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/font/font_32_UI.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/UserInterface/Pause/PauseOverlay.gd" type="Script" id=4]

[node name="PauseOverlay" type="ColorRect"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.443137 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.5
margin_top = 43.8587
margin_right = 30.5
margin_bottom = 76.8587
custom_fonts/font = ExtResource( 3 )
text = "Pause"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.0
margin_top = -144.0
margin_right = 79.0
margin_bottom = 144.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGame" type="TextureRect" parent="VBoxContainer"]
margin_right = 158.0
margin_bottom = 69.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/BackGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.5
margin_top = -11.5
margin_right = 49.5
margin_bottom = 11.5
custom_fonts/font = ExtResource( 2 )
text = "Back To Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackMenu" type="TextureRect" parent="VBoxContainer"]
margin_top = 73.0
margin_right = 158.0
margin_bottom = 142.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/BackMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.5
margin_top = -11.5
margin_right = 49.5
margin_bottom = 11.5
custom_fonts/font = ExtResource( 2 )
text = "Back To Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackLevel" type="TextureRect" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 158.0
margin_bottom = 215.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/BackLevel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.5
margin_top = -11.5
margin_right = 49.5
margin_bottom = 11.5
custom_fonts/font = ExtResource( 2 )
text = "Back To Level"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureRect" parent="VBoxContainer"]
margin_top = 219.0
margin_right = 158.0
margin_bottom = 288.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/Quit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.5
margin_top = -11.5
margin_right = 49.5
margin_bottom = 11.5
custom_fonts/font = ExtResource( 2 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="VBoxContainer/BackGame" to="." method="_on_BackGame_gui_input"]
[connection signal="gui_input" from="VBoxContainer/BackMenu" to="." method="_on_BackMenu_gui_input"]
[connection signal="gui_input" from="VBoxContainer/BackLevel" to="." method="_on_BackLevel_gui_input"]
[connection signal="gui_input" from="VBoxContainer/Quit" to="." method="_on_Quit_gui_input"]
